--- a/index.html
+++ b/index.html
@@ -48,14 +48,14 @@
                             <li class="mb-3"><button id="answer4" value="3" type="button"
                                     class="choicesBtn">Answer4</button></li>
                         </ul>
-                        <div id="answerDisplay" class="answer font-weight-light font-italic">
+                        <div id="answerDisplay" class="answers font-weight-light font-italic">
                             <hr>
                         </div>
                     </div>
                 </div>
             </section>
 
-            <section id="end">
+            <section id="final">
                 <div class="row">
                     <div class="col-3"></div>
                     <div class="col-6">
